--- a/install
+++ b/install
@@ -391,7 +391,9 @@ cd php-5.6.20
 if rpm -ivh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-6.noarch.rpm; then 
 echo -e "\033[33;32m Epel Fedoraproject update Success";date +"%r" >> $BUILD;echo "Success : Epel RPM " >> $BUILD
 else
-	if rpm -ivh $SCRIPTPATH/src/epel-release-7-6.noarch.rpm; then 
+	#if rpm -ivh $SCRIPTPATH/src/epel-release-7-6.noarch.rpm; then 
+	# Remove Epel if error Error: xz compression not available in yum install package command
+	#yum remove epel-release;rm -rf /var/cache/yum/x86_64/6/epel
 	echo -e "\033[33;31m Epel Feoraproject update Failed";date +"%r" >> $BUILD;echo "Failed : Epel RPM " >> $BUILD
 	fi
 fi
