--- a/install
+++ b/install
@@ -13,7 +13,7 @@
 # Absolute path to this script, e.g. /home/user/bin/install.sh
 
 
-
+ep
 
 #Installation with flag input grab
 
@@ -388,14 +388,14 @@ echo -e "\033[33;31m php extract Failed";date +"%r" >> $BUILD;echo "Failed : Ext
 tar -xzf php-*
 fi
 cd php-5.6.20
-if rpm -ivh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-6.noarch.rpm; then 
+if rpm -ivh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-8.noarch.rpm; then 
 echo -e "\033[33;32m Epel Fedoraproject update Success";date +"%r" >> $BUILD;echo "Success : Epel RPM " >> $BUILD
 else
 	#if rpm -ivh $SCRIPTPATH/src/epel-release-7-6.noarch.rpm; then 
 	# Remove Epel if error Error: xz compression not available in yum install package command
 	#yum remove epel-release;rm -rf /var/cache/yum/x86_64/6/epel
-	echo -e "\033[33;31m Epel Feoraproject update Failed";date +"%r" >> $BUILD;echo "Failed : Epel RPM " >> $BUILD
-	fi
+	#echo -e "\033[33;31m Epel Feoraproject update Failed";date +"%r" >> $BUILD;echo "Failed : Epel RPM " >> $BUILD
+	#fi
 fi
 
 if yum -y install perl; then 
