--- a/install
+++ b/install
@@ -394,7 +394,7 @@ else
 	#if rpm -ivh $SCRIPTPATH/src/epel-release-7-6.noarch.rpm; then 
 	# Remove Epel if error Error: xz compression not available in yum install package command
 	#yum remove epel-release;rm -rf /var/cache/yum/x86_64/6/epel
-	#echo -e "\033[33;31m Epel Feoraproject update Failed";date +"%r" >> $BUILD;echo "Failed : Epel RPM " >> $BUILD
+	echo -e "\033[33;31m Epel Feoraproject update Failed";date +"%r" >> $BUILD;echo "Failed : Epel RPM " >> $BUILD
 	#fi
 fi
 
